<resources>
    <string name="app_name">MyAndroidApplication</string>
    <string name="titleWarning">WARNING</string>
    <string name="ok">OK</string>
    <string name="showIMIEPermission">NEED PERMISSSION TO SHOW IMEI</string>
    <string name="CameraPermission">NEED PERMISSION TO MAKE A PHOTO</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="about">About</string>
    <string name="empty_field_error">All fields must be filled</string>
    <string name="email_error">Email must contain the symbol @</string>
    <string name="confirm_password_error">Passwords do not match </string>
    <string name="password_length_error">Password must be at least 7 characters</string>
    <string name="phone_length_error">The phone number must contain 13 characters.</string>
    <string name="email_point_error">Invalid email, check again</string>
    <string name="user_error">User with this email already exists</string>
    <string name="phone_plus_error">Invalid phone number, phone number must begin with the + sign</string>
    <string name="password_wrong">Wrong password</string>
    <string name="no_such_email_error">No such email</string>
    <string name="register_successful">Register successful</string>
    <string name="edit_successful">Edit profile successful</string>
    <string name="data_in_correct">Data entered is not correct</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="make_photo">Make photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="login">Log in</string>
    <string name="get_started">Get started</string>
    <string name="signOut">Sign out</string>
    <string name="image_path">Android/data/com.maxrescuerinc.myandroidapplication/Pictures</string>
    <string name="finish_register">Finish</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="go_to_about">Do you really want to go to the About page?</string>
    <string name="leave_page">Do you really want to leave the page, all unsaved data will be lost</string>
    <string name="error_rss">Enter a valid Rss feed url or check you Internet connection</string>
    <string name="setting">Setting</string>
    <string name="rss">Rss link</string>
    <string name="set">Set</string>
</resources>
