<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Authorization.SelectedImageFragment">

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/imageViewSelected"
        android:layout_width="202dp"
        android:layout_height="202dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        tools:src="@tools:sample/avatars[4]"
        tools:srcCompat="@tools:sample/avatars" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSelectedMakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/make_photo" />

        <Button
            android:id="@+id/buttonSelectedChosePhoto"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/choose_photo" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSelectedFinishRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:text="@string/finish_register" />


</LinearLayout>